cleaned up matching a bit

--- a/src/matching.ipynb
+++ b/src/matching.ipynb
@@ -2573,7 +2573,8 @@
       "progress: 39.97%\n",
       "progress: 49.96%\n",
       "progress: 59.95%\n",
-      "progress: 69.94%\n"
+      "progress: 69.94%\n",
+      "progress: 79.93%\n"
      ]
     }
    ],
@@ -2594,7 +2595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Getting unique clean companies from ndc\n",
+    "#Getting unique clean companies from ndc_matching (see ndc matrix section above to see where this variable came from)\n",
     "ndc_unique_clean = ndc_matching['clean company name']\n",
     "ndc_unique_clean.drop_duplicates(inplace = True)\n",
     "ndc_unique_clean = pd.DataFrame(ndc_unique_clean)\n",
@@ -2714,7 +2715,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Getting unique clean companies from fda\n",
+    "#Getting unique clean companies from fda (see fda matrix section above to see where this variable came from)\n",
     "fda_unique_clean = matchFDA['clean company name']\n",
     "fda_unique_clean.drop_duplicates(inplace = True)\n",
     "fda_unique_clean = pd.DataFrame(fda_unique_clean)\n",
@@ -2908,36 +2909,8 @@
    "outputs": [],
    "source": [
     "#Using isabel's function\n",
-    "matchFDAAgainstNdc = matchWithFuzzyNames(fda_unique_clean['fda clean name'].tolist(), ndc_unique_clean['ndc clean name'].tolist(), new_fda_original)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Isabels function\n",
-    "def matchWithFuzzyNames(l1, l2, original):\n",
-    "    match = pd.DataFrame(columns = ['original company names', 'clean company name', 'company matches', 'fuzz ratio'])\n",
-    "    for i in l1:\n",
-    "        matches = []\n",
-    "        score = []\n",
-    "        score_partial = []\n",
-    "        for j in l2:\n",
-    "            if (fuzz.ratio(i,j)) == 100:\n",
-    "                matches.append(j)\n",
-    "                score.append(fuzz.ratio(i,j))\n",
-    "                \n",
-    "        match = match.append({ 'clean company name': i,'company matches': matches, 'fuzz ratio': score},ignore_index=True)\n",
-    "        \n",
-    "    match['original company names'] = original\n",
-    "        \n",
-    "\n",
-    " \n",
-    "\n",
-    "\n",
-    "    return match"
+    "#I think ignore this line of code for now\n",
+    "#matchFDAAgainstNdc = matchWithFuzzyNames(fda_unique_clean['fda clean name'].tolist(), ndc_unique_clean['ndc clean name'].tolist(), new_fda_original)"
    ]
   },
   {
@@ -3376,7 +3349,7 @@
    ],
    "source": [
     "x.head(50)\n",
-    "#We need row numbers in both fda and ndc where each corporate family shows up"
+    "#Obviously not a whole lot here, but it does show which companies are in both datasets that match 100%"
    ]
   },
   {
@@ -3512,212 +3485,11 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3>Output Devika Wanted</h3>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 230,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>original company names</th>\n",
-       "      <th>clean company name</th>\n",
-       "      <th>company matches</th>\n",
-       "      <th>fuzz ratio</th>\n",
-       "      <th>fuzz partial ratio</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>SPIRONOLACTONE 2%</td>\n",
-       "      <td>spironolactone</td>\n",
-       "      <td>[spironolactone]</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>[100]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-L'Oreal USA Products Inc</td>\n",
-       "      <td>-loreal</td>\n",
-       "      <td>[-loreal]</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>[100]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>.Cardinal Health</td>\n",
-       "      <td>cardinal</td>\n",
-       "      <td>[cardinal, cardinal, cardinal, cardinal, cardi...</td>\n",
-       "      <td>[100, 100, 100, 100, 100, 100, 100, 100, 100, ...</td>\n",
-       "      <td>[100, 100, 100, 100, 100, 100, 100, 100, 100, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>.Church &amp; Dwight Canada Corp</td>\n",
-       "      <td>church&amp;dwight canada</td>\n",
-       "      <td>[church&amp;dwight canada, church&amp;dwight canada, c...</td>\n",
-       "      <td>[100, 100, 100]</td>\n",
-       "      <td>[100, 100, 100]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>{Preferred Pharmaeutials INC.</td>\n",
-       "      <td>preferred pharmaeutials</td>\n",
-       "      <td>[preferred pharmaeutials]</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>[100]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6712</th>\n",
-       "      <td>Zydus Pharmaceuticals USA Inc</td>\n",
-       "      <td>zydus</td>\n",
-       "      <td>[zydus, zydus, zydus, zydus]</td>\n",
-       "      <td>[100, 100, 100, 100]</td>\n",
-       "      <td>[100, 100, 100, 100]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6713</th>\n",
-       "      <td>Zydus Pharmaceuticals USA Inc.</td>\n",
-       "      <td>zydus</td>\n",
-       "      <td>[zydus, zydus, zydus, zydus]</td>\n",
-       "      <td>[100, 100, 100, 100]</td>\n",
-       "      <td>[100, 100, 100, 100]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6714</th>\n",
-       "      <td>Zydus Technologies Limited</td>\n",
-       "      <td>zydus</td>\n",
-       "      <td>[zydus, zydus, zydus, zydus]</td>\n",
-       "      <td>[100, 100, 100, 100]</td>\n",
-       "      <td>[100, 100, 100, 100]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6715</th>\n",
-       "      <td>ZYGONE</td>\n",
-       "      <td>zygone</td>\n",
-       "      <td>[zygone]</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>[100]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6716</th>\n",
-       "      <td>Zyla Life Sciences US Inc.</td>\n",
-       "      <td>zyla life sciences</td>\n",
-       "      <td>[zyla life sciences]</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>[100]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6717 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              original company names       clean company name  \\\n",
-       "0                 SPIRONOLACTONE 2%            spironolactone   \n",
-       "1          -L'Oreal USA Products Inc                  -loreal   \n",
-       "2                   .Cardinal Health                 cardinal   \n",
-       "3       .Church & Dwight Canada Corp     church&dwight canada   \n",
-       "4      {Preferred Pharmaeutials INC.  preferred pharmaeutials   \n",
-       "...                              ...                      ...   \n",
-       "6712   Zydus Pharmaceuticals USA Inc                    zydus   \n",
-       "6713  Zydus Pharmaceuticals USA Inc.                    zydus   \n",
-       "6714      Zydus Technologies Limited                    zydus   \n",
-       "6715                          ZYGONE                   zygone   \n",
-       "6716      Zyla Life Sciences US Inc.       zyla life sciences   \n",
-       "\n",
-       "                                        company matches  \\\n",
-       "0                                      [spironolactone]   \n",
-       "1                                             [-loreal]   \n",
-       "2     [cardinal, cardinal, cardinal, cardinal, cardi...   \n",
-       "3     [church&dwight canada, church&dwight canada, c...   \n",
-       "4                             [preferred pharmaeutials]   \n",
-       "...                                                 ...   \n",
-       "6712                       [zydus, zydus, zydus, zydus]   \n",
-       "6713                       [zydus, zydus, zydus, zydus]   \n",
-       "6714                       [zydus, zydus, zydus, zydus]   \n",
-       "6715                                           [zygone]   \n",
-       "6716                               [zyla life sciences]   \n",
-       "\n",
-       "                                             fuzz ratio  \\\n",
-       "0                                                 [100]   \n",
-       "1                                                 [100]   \n",
-       "2     [100, 100, 100, 100, 100, 100, 100, 100, 100, ...   \n",
-       "3                                       [100, 100, 100]   \n",
-       "4                                                 [100]   \n",
-       "...                                                 ...   \n",
-       "6712                               [100, 100, 100, 100]   \n",
-       "6713                               [100, 100, 100, 100]   \n",
-       "6714                               [100, 100, 100, 100]   \n",
-       "6715                                              [100]   \n",
-       "6716                                              [100]   \n",
-       "\n",
-       "                                     fuzz partial ratio  \n",
-       "0                                                 [100]  \n",
-       "1                                                 [100]  \n",
-       "2     [100, 100, 100, 100, 100, 100, 100, 100, 100, ...  \n",
-       "3                                       [100, 100, 100]  \n",
-       "4                                                 [100]  \n",
-       "...                                                 ...  \n",
-       "6712                               [100, 100, 100, 100]  \n",
-       "6713                               [100, 100, 100, 100]  \n",
-       "6714                               [100, 100, 100, 100]  \n",
-       "6715                                              [100]  \n",
-       "6716                                              [100]  \n",
-       "\n",
-       "[6717 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 230,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ndc_matching"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ndc = pd.read_csv(\"../data/working/ndc_clean.csv\", index_col = [0])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3728,27 +3500,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['original_company', 'originalRow', 'cleaned_name'], dtype='object')"
-      ]
-     },
-     "execution_count": 250,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -3774,171 +3542,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>clean1</th>\n",
-       "      <th>clean2</th>\n",
-       "      <th>row</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>spironolactone</td>\n",
-       "      <td>spironolactone</td>\n",
-       "      <td>row\n",
-       "0    25\n",
-       "Name: originalRow, dtype: int64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-loreal</td>\n",
-       "      <td>-loreal</td>\n",
-       "      <td>row\n",
-       "1    26\n",
-       "Name: originalRow, dtype: int64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>cardinal</td>\n",
-       "      <td>cardinal</td>\n",
-       "      <td>row\n",
-       "2    27\n",
-       "Name: originalRow, dtype: int64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>church&amp;dwight canada</td>\n",
-       "      <td>church&amp;dwight canada</td>\n",
-       "      <td>row\n",
-       "3    28\n",
-       "Name: originalRow, dtype: int64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>preferred pharmaeutials</td>\n",
-       "      <td>preferred pharmaeutials</td>\n",
-       "      <td>row\n",
-       "4    29\n",
-       "Name: originalRow, dtype: int64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>†wal-mart stores†</td>\n",
-       "      <td>†wal-mart stores†</td>\n",
-       "      <td>row\n",
-       "5    30\n",
-       "Name: originalRow, dtype: int64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>veterans</td>\n",
-       "      <td>veterans</td>\n",
-       "      <td>row\n",
-       "6    31\n",
-       "Name: originalRow, dtype: int64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>medco</td>\n",
-       "      <td>medco</td>\n",
-       "      <td>row\n",
-       "7    32\n",
-       "Name: originalRow, dtype: int64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>st class</td>\n",
-       "      <td>st class</td>\n",
-       "      <td>row\n",
-       "8    33\n",
-       "Name: originalRow, dtype: int64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>st medx</td>\n",
-       "      <td>st medx</td>\n",
-       "      <td>row\n",
-       "9    34\n",
-       "Name: originalRow, dtype: int64</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    clean1                   clean2  \\\n",
-       "0           spironolactone           spironolactone   \n",
-       "1                  -loreal                  -loreal   \n",
-       "2                 cardinal                 cardinal   \n",
-       "3     church&dwight canada     church&dwight canada   \n",
-       "4  preferred pharmaeutials  preferred pharmaeutials   \n",
-       "5        †wal-mart stores†        †wal-mart stores†   \n",
-       "6                 veterans                 veterans   \n",
-       "7                    medco                    medco   \n",
-       "8                 st class                 st class   \n",
-       "9                  st medx                  st medx   \n",
-       "\n",
-       "                                           row  \n",
-       "0  row\n",
-       "0    25\n",
-       "Name: originalRow, dtype: int64  \n",
-       "1  row\n",
-       "1    26\n",
-       "Name: originalRow, dtype: int64  \n",
-       "2  row\n",
-       "2    27\n",
-       "Name: originalRow, dtype: int64  \n",
-       "3  row\n",
-       "3    28\n",
-       "Name: originalRow, dtype: int64  \n",
-       "4  row\n",
-       "4    29\n",
-       "Name: originalRow, dtype: int64  \n",
-       "5  row\n",
-       "5    30\n",
-       "Name: originalRow, dtype: int64  \n",
-       "6  row\n",
-       "6    31\n",
-       "Name: originalRow, dtype: int64  \n",
-       "7  row\n",
-       "7    32\n",
-       "Name: originalRow, dtype: int64  \n",
-       "8  row\n",
-       "8    33\n",
-       "Name: originalRow, dtype: int64  \n",
-       "9  row\n",
-       "9    34\n",
-       "Name: originalRow, dtype: int64  "
-      ]
-     },
-     "execution_count": 255,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
