Beginnings of merge and updating profilingForDash

--- a/src/profilingForDash.ipynb
+++ b/src/profilingForDash.ipynb
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
    "source": [
     "pub2013 = dna2013['publisher_name'].value_counts().sort_values(ascending = True).tail(10).plot(kind = \"barh\", title = \"Top 10 publishers in DNA, 2013\", color = (\"#232D4B\", \"#E57200\"))\n",
     "fig = pub2013.get_figure()\n",
-    "fig.savefig('shinyDashboardBI/www/2013Publisherplot.png')"
+    "fig.savefig('shinyDashboardBI/www/2013Publisherplot.jpeg')"
    ]
   },
   {
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
