--- a/src/Cleaning/cleanFDA.ipynb
+++ b/src/Cleaning/cleanFDA.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CLEANING FDA DATA SET\n",
+    "\n",
+    "This Jupyter Notebook contains the code used to clean the FDA dataset. The following cleaning methods (each its own function defined in this notebook) were applied to the dateset:\n",
+    "\n",
+    "Lower case method tolower\n",
+    "\n",
+    "Punctuation\n",
+    "  Remove parenthesize + parenthesized content\n",
+    "    \n",
+    "   Keep \n",
+    "     Hyphens/Dashes,\n",
+    "     Ampersands,\n",
+    "     Underscore,\n",
+    "     Remove everything else (use Neil's code)\n",
+    "    \n",
+    "Remove legal entity labels – Daniel has a list link – regex patterns\n",
+    "\n",
+    "Count unique string tokens\n",
+    "\n",
+    "Inspect top 10-30 string token\n",
+    "s\n",
+    "Determine what number top common string tokens to remove"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -9,30 +37,6 @@
     "import pandas as pd\n",
     "import re\n",
     "from collections import Counter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### CLEANING FDA DATA SET\n",
-    "\n",
-    "Lower case method tolower\n",
-    "\n",
-    "Punctuation\n",
-    "    (do this first)  - Remove parenthesized content\n",
-    "    \n",
-    "Keep – already in Ian’s notebook\n",
-    "    Hyphens/Dashes \n",
-    "    Ampersands\n",
-    "    Underscore\n",
-    "    Remove everything else (use Neil's code)\n",
-    "    \n",
-    "Remove legal entity labels – Daniel has a list link – regex patterns\n",
-    "\n",
-    "Count unique string tokens\n",
-    "Inspect top 10-30 string tokens\n",
-    "Determine what number top common string tokens to remov"
    ]
   },
   {
@@ -514,15 +518,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Counter' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-8eb5f7292058>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Count the most frequent words in the FDA dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mword_freq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCounter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mwords\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfda\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Company Clean'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m#for word in the column Company Clean\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mword_freq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#count each word in the input and add count of word appperance to counter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Counter' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Count the most frequent words in the FDA dataset \n",
     "word_freq = Counter()\n",
     "\n",
-    "for words in fda['Company Clean']:\n",
-    "    word_freq.update(str(words).split(\" \"))"
+    "for words in fda['Company Clean']: #for word in the column Company Clean\n",
+    "    word_freq.update(str(words).split(\" \")) #count each word in the input and add count of word appperance to counter"
    ]
   },
   {
@@ -560,11 +576,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#a list of common words found in the FDA,DNA and NDC data set\n",
     "common_words = ['pharms', 'pharma', 'labs', 'pharm','usa', 'us', 'hlthcare', 'and', 'the', 'of', 'pharmaceuticals',\n",
     "                'medical', 'products', 'laboratories', 'anda', 'supply', 'health', 'pharmaceutical','international',\n",
     "                'care','nda', 'coltd','home','healthcare', 'intl', 'group', 'holdings', 'capital', 'technologies',\n",
     "                'bank', 'university','energy', 'partners','association', 'services', 'national', 'systems',\n",
-    "                'american','']"
+    "                'american','']\n",
+    "\n"
    ]
   },
   {
@@ -573,365 +591,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fda['Company Clean'] = fda['Company Clean'].apply(lambda x: ' '.join([word for word in x.split() if word not in (common_words)]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>FDA Companies</th>\n",
-       "      <th>Company Clean</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>400</th>\n",
-       "      <td>HOSPIRA INC</td>\n",
-       "      <td>hospira</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>401</th>\n",
-       "      <td>HOT SHOTS NM LLC</td>\n",
-       "      <td>hot shots nm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>402</th>\n",
-       "      <td>HOUSTON CYCLOTRON</td>\n",
-       "      <td>houston cyclotron</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>403</th>\n",
-       "      <td>HQ SPCLT PHARMA</td>\n",
-       "      <td>hq spclt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>404</th>\n",
-       "      <td>HQ SPECIALITY PHARMA</td>\n",
-       "      <td>hq speciality</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>405</th>\n",
-       "      <td>HQ SPECLT PHARMA</td>\n",
-       "      <td>hq speclt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>406</th>\n",
-       "      <td>HRA PHARMA</td>\n",
-       "      <td>hra</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>407</th>\n",
-       "      <td>HUMAN GENOME SCIENCES INC.</td>\n",
-       "      <td>human genome sciences.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>408</th>\n",
-       "      <td>IBA MOLECULAR N AM</td>\n",
-       "      <td>iba molecular</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>409</th>\n",
-       "      <td>ICU MEDICAL INC</td>\n",
-       "      <td>icu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>410</th>\n",
-       "      <td>IDT AUSTRALIA LTD</td>\n",
-       "      <td>idt australia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>411</th>\n",
-       "      <td>IMCLONE</td>\n",
-       "      <td>imclone</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>412</th>\n",
-       "      <td>IMMUNEX</td>\n",
-       "      <td>immunex</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>413</th>\n",
-       "      <td>IMPAX LABS</td>\n",
-       "      <td>impax</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>414</th>\n",
-       "      <td>IMPAX LABS INC</td>\n",
-       "      <td>impax</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>415</th>\n",
-       "      <td>IMPAX PHARMS</td>\n",
-       "      <td>impax</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>416</th>\n",
-       "      <td>INCYTE CORP</td>\n",
-       "      <td>incyte</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>417</th>\n",
-       "      <td>INDCHEMIE HEALTH</td>\n",
-       "      <td>indchemie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>418</th>\n",
-       "      <td>INDIVIOR INC</td>\n",
-       "      <td>indivior</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>419</th>\n",
-       "      <td>INDOCO REMEDIES</td>\n",
-       "      <td>indoco remedies</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>420</th>\n",
-       "      <td>INGENUS PHARMS NJ</td>\n",
-       "      <td>ingenus nj</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421</th>\n",
-       "      <td>INNOGENIX</td>\n",
-       "      <td>innogenix</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>422</th>\n",
-       "      <td>INSIGHT PHARMS</td>\n",
-       "      <td>insight</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>423</th>\n",
-       "      <td>INST BIOCHEM</td>\n",
-       "      <td>inst biochem</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>424</th>\n",
-       "      <td>INSTITUT BIOCHIMIQUE</td>\n",
-       "      <td>institut biochimique</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>425</th>\n",
-       "      <td>INSYS DEV CO INC</td>\n",
-       "      <td>insys dev</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>426</th>\n",
-       "      <td>INTELLIPHARMACEUTICS</td>\n",
-       "      <td>intellipharmaceutics</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>427</th>\n",
-       "      <td>INTERPHARMA PRAHA AS</td>\n",
-       "      <td>interpharma praha</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>428</th>\n",
-       "      <td>INTL MEDICATION</td>\n",
-       "      <td>medication</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>429</th>\n",
-       "      <td>INVAGEN PHARMS</td>\n",
-       "      <td>invagen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>430</th>\n",
-       "      <td>INVENTIA HLTHCARE</td>\n",
-       "      <td>inventia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>431</th>\n",
-       "      <td>IPCA LABS LTD</td>\n",
-       "      <td>ipca</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>432</th>\n",
-       "      <td>IPR</td>\n",
-       "      <td>ipr</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>433</th>\n",
-       "      <td>IPSEN BIOPHARM LTD</td>\n",
-       "      <td>ipsen biopharm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>434</th>\n",
-       "      <td>IPSEN INC</td>\n",
-       "      <td>ipsen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>435</th>\n",
-       "      <td>IPSEN PHARMA</td>\n",
-       "      <td>ipsen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>436</th>\n",
-       "      <td>IROKO PHARMS</td>\n",
-       "      <td>iroko</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>437</th>\n",
-       "      <td>IROKO PHARMS LLC</td>\n",
-       "      <td>iroko</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>438</th>\n",
-       "      <td>IRONWOOD PHARMS INC</td>\n",
-       "      <td>ironwood</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>439</th>\n",
-       "      <td>ISTITUTO BIO ITA SPA</td>\n",
-       "      <td>istituto bio ita</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>440</th>\n",
-       "      <td>IVAX PHARMS INC</td>\n",
-       "      <td>ivax</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>441</th>\n",
-       "      <td>IVAX SUB TEVA PHARMS</td>\n",
-       "      <td>ivax sub teva</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>442</th>\n",
-       "      <td>J AND J CONSUMER INC</td>\n",
-       "      <td>j consumer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>443</th>\n",
-       "      <td>JANSSEN BIOTECH</td>\n",
-       "      <td>janssen biotech</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>444</th>\n",
-       "      <td>JANSSEN PHARMS</td>\n",
-       "      <td>janssen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>445</th>\n",
-       "      <td>JANSSEN PRODS</td>\n",
-       "      <td>janssen prods</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>446</th>\n",
-       "      <td>JANSSEN R AND D</td>\n",
-       "      <td>janssen d</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>447</th>\n",
-       "      <td>JANSSEN RES AND DEV</td>\n",
-       "      <td>janssen res dev</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>448</th>\n",
-       "      <td>JANSSEN THERAP</td>\n",
-       "      <td>janssen therap</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>449</th>\n",
-       "      <td>JAVELIN PHARMS INC</td>\n",
-       "      <td>javelin</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 FDA Companies            Company Clean\n",
-       "400                 HOSPIRA INC                 hospira\n",
-       "401            HOT SHOTS NM LLC            hot shots nm\n",
-       "402           HOUSTON CYCLOTRON       houston cyclotron\n",
-       "403             HQ SPCLT PHARMA                hq spclt\n",
-       "404        HQ SPECIALITY PHARMA           hq speciality\n",
-       "405            HQ SPECLT PHARMA               hq speclt\n",
-       "406                  HRA PHARMA                     hra\n",
-       "407  HUMAN GENOME SCIENCES INC.  human genome sciences.\n",
-       "408          IBA MOLECULAR N AM           iba molecular\n",
-       "409             ICU MEDICAL INC                     icu\n",
-       "410           IDT AUSTRALIA LTD           idt australia\n",
-       "411                     IMCLONE                 imclone\n",
-       "412                     IMMUNEX                 immunex\n",
-       "413                  IMPAX LABS                   impax\n",
-       "414              IMPAX LABS INC                   impax\n",
-       "415                IMPAX PHARMS                   impax\n",
-       "416                 INCYTE CORP                  incyte\n",
-       "417            INDCHEMIE HEALTH               indchemie\n",
-       "418                INDIVIOR INC                indivior\n",
-       "419             INDOCO REMEDIES         indoco remedies\n",
-       "420           INGENUS PHARMS NJ              ingenus nj\n",
-       "421                   INNOGENIX               innogenix\n",
-       "422              INSIGHT PHARMS                 insight\n",
-       "423                INST BIOCHEM            inst biochem\n",
-       "424        INSTITUT BIOCHIMIQUE    institut biochimique\n",
-       "425            INSYS DEV CO INC               insys dev\n",
-       "426        INTELLIPHARMACEUTICS    intellipharmaceutics\n",
-       "427        INTERPHARMA PRAHA AS       interpharma praha\n",
-       "428             INTL MEDICATION              medication\n",
-       "429              INVAGEN PHARMS                 invagen\n",
-       "430           INVENTIA HLTHCARE                inventia\n",
-       "431               IPCA LABS LTD                    ipca\n",
-       "432                         IPR                     ipr\n",
-       "433          IPSEN BIOPHARM LTD          ipsen biopharm\n",
-       "434                   IPSEN INC                   ipsen\n",
-       "435                IPSEN PHARMA                   ipsen\n",
-       "436                IROKO PHARMS                   iroko\n",
-       "437            IROKO PHARMS LLC                   iroko\n",
-       "438         IRONWOOD PHARMS INC                ironwood\n",
-       "439        ISTITUTO BIO ITA SPA        istituto bio ita\n",
-       "440             IVAX PHARMS INC                    ivax\n",
-       "441        IVAX SUB TEVA PHARMS           ivax sub teva\n",
-       "442        J AND J CONSUMER INC              j consumer\n",
-       "443             JANSSEN BIOTECH         janssen biotech\n",
-       "444              JANSSEN PHARMS                 janssen\n",
-       "445               JANSSEN PRODS           janssen prods\n",
-       "446             JANSSEN R AND D               janssen d\n",
-       "447         JANSSEN RES AND DEV         janssen res dev\n",
-       "448              JANSSEN THERAP          janssen therap\n",
-       "449          JAVELIN PHARMS INC                 javelin"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fda[400:450]\n",
-    "#272"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fda_clean = fda"
+    "#Function that removes the common words from the company name. specifically for each entry it seperate the words and adds them back together if the words is not found in the list common_words\n",
+    "fda['Company Clean'] = fda['Company Clean'].apply(lambda row: ' '.join([word for word in row.split() if word not in (common_words)]))"
    ]
   },
   {
@@ -940,7 +601,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fda_clean.to_csv(\"../data/working/fda_clean.csv\")"
+    "#save the new fda clean df to working under the name fda_clean.csv\n",
+    "fda.to_csv(\"../data/working/fda_clean.csv\")"
    ]
   }
  ],
