--- a/src/Cleaning/cleaning DNAcodebook.ipynb
+++ b/src/Cleaning/cleaning DNAcodebook.ipynb
@@ -2320,7 +2320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Making dashes, ampersands and underscores into combined words"
+    "#### Making dashes, ampersands and underscores into combined words"
    ]
   },
   {
