reorganzing matching files

--- a/src/Matching/across_match.ipynb
+++ b/src/Matching/across_match.ipynb
@@ -10,6 +10,7 @@
     " * FDA and NDC\n",
     " * FDA and DNA\n",
     " * NDC and DNA \n",
+    " * NDC and FDA Matrix\n",
     " \n",
     "The function that creates the table output for corporate family and all matches in the second df is defined here."
    ]
@@ -277,59 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Matrix FDAxNDC"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Setting up inputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Getting unique clean companies from ndc_matching (see ndc matrix section above to see where this variable came from)\n",
-    "ndc_unique_clean = ndc_['clean company name']\n",
-    "#drops any duplicates so that the result is a series of unique companies that matched 100%\n",
-    "ndc_unique_clean.drop_duplicates(inplace = True)\n",
-    "#convert series to a df\n",
-    "ndc_unique_clean = pd.DataFrame(ndc_unique_clean)\n",
-    "#renaming column\n",
-    "ndc_unique_clean = ndc_unique_clean.rename(columns = {\"clean company name\": \"ndc clean name\"})\n",
-    "#reset index so numbers are in order\n",
-    "ndc_unique_clean.reset_index(inplace = True)\n",
-    "#delete index column\n",
-    "del ndc_unique_clean['index']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Getting unique clean companies from fda (see fda matrix section above to see where this variable came from)\n",
-    "fda_unique_clean = matchFDA['clean company name']\n",
-    "fda_unique_clean.drop_duplicates(inplace = True)\n",
-    "fda_unique_clean = pd.DataFrame(fda_unique_clean)\n",
-    "fda_unique_clean = fda_unique_clean.rename(columns = {\"clean company name\": \"fda clean name\"})\n",
-    "fda_unique_clean.reset_index(inplace = True)\n",
-    "del fda_unique_clean['index']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#creates a 796 x 5209 matrix\n",
-    "fdaxndc_matrix = matrix_score(fda_unique_clean['fda clean name'].tolist(), ndc_unique_clean['ndc clean name'].tolist())"
+    "#### FDAxNDC Matching"
    ]
   },
   {
@@ -338,19 +287,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "fdaxndc = matchWithFuzzyNamesAcross(fda_clean, ndc_clean, fda_og, ndc_og, fda_row, ndc_row)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1378,6 +1321,58 @@
    "source": [
     "#matches the first df columns with the necessary information from the second df to complete the final output\n",
     "ndcxdna_unique[['corporate family', 'clean DNA row', 'clean DNA company', 'original DNA company', 'fuzz ratio']] = ndcxdna_match1[['clean NDC company','clean DNA row', 'clean DNA company', 'original DNA company', 'fuzz ratio']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrix FDAxNDC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Getting unique clean companies from ndc_matching (see ndc matrix section above to see where this variable came from)\n",
+    "ndc_unique_clean = ndcxdna_unique['clean NDC company']\n",
+    "#drops any duplicates so that the result is a series of unique companies that matched 100%\n",
+    "ndc_unique_clean.drop_duplicates(inplace = True)\n",
+    "#convert series to a df\n",
+    "ndc_unique_clean = pd.DataFrame(ndc_unique_clean)\n",
+    "#renaming column\n",
+    "ndc_unique_clean = ndc_unique_clean.rename(columns = {\"clean company name\": \"ndc clean name\"})\n",
+    "#reset index so numbers are in order\n",
+    "ndc_unique_clean.reset_index(inplace = True)\n",
+    "#delete index column\n",
+    "del ndc_unique_clean['index']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Getting unique clean companies from fda (see fda matrix section above to see where this variable came from)\n",
+    "fda_unique_clean = fdaxdna['clean fda company name']\n",
+    "fda_unique_clean.drop_duplicates(inplace = True)\n",
+    "fda_unique_clean = pd.DataFrame(fda_unique_clean)\n",
+    "fda_unique_clean = fda_unique_clean.rename(columns = {\"clean company name\": \"fda clean name\"})\n",
+    "fda_unique_clean.reset_index(inplace = True)\n",
+    "del fda_unique_clean['index']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creates a 796 x 5209 matrix\n",
+    "fdaxndc_matrix = matrix_score(fda_unique_clean['fda clean name'].tolist(), ndc_unique_clean['ndc clean name'].tolist())"
    ]
   },
   {
