fixing path files in code and adding notes on files to delete

--- a/src/Matching/Delete_Fuzzy_matching.ipynb
+++ b/src/Matching/Delete_Fuzzy_matching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Maybe keep this file for the original code it has, specifcally the output aspect. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +92,7 @@
        "4       ABBOTT LABS"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +210,7 @@
     }
    ],
    "source": [
-    "dictionary=pd.read_csv(\"../data/original/companies.csv\")\n",
+    "dictionary = pd.read_csv(\"../data/original/companies.csv\")\n",
     "dictionary.head()"
    ]
   },
