--- a/src/Matching/across_match.ipynb
+++ b/src/Matching/across_match.ipynb
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ndc = pd.read_csv(\"../data/working/ndc_clean.csv\", index_col = [0])"
+    "ndc = pd.read_csv(\"../../data/working/ndc_clean.csv\", index_col = [0])"
    ]
   },
   {
@@ -632,7 +632,7 @@
    "outputs": [],
    "source": [
     "#read in the dna dataset \n",
-    "dna = pd.read_csv(\"../data/working/dna_clean.csv\", index_col = [0])"
+    "dna = pd.read_csv(\"../../data/working/dna_clean.csv\", index_col = [0])"
    ]
   },
   {
@@ -687,6 +687,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#THIS IS OLD CODE NO LONG RELEVANT\n",
     "fdaxnda= pd.read_csv('DNA and FDA matches') #reading in the last minute df save to finish output"
    ]
   },
@@ -940,7 +941,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cleaning up dataframe to only have one corporate family and all it's matches in one row "
+    "### Cleaning up dataframe to only have one corporate family and all atches in one row "
    ]
   },
   {
