--- a/src/Matching/matrix_analysis.ipynb
+++ b/src/Matching/matrix_analysis.ipynb
@@ -24,6 +24,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "match_companies=[]\n",
+    "for i in df1['company_names']:\n",
+    "    match=process.extractOne(i, fda.FDA_companies)\n",
+    "    match_companies.append(i)\n",
+    "    match_companies.append(match)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
