Added chart for 2014 top companies mentioned

--- a/src/profilingForDash.ipynb
+++ b/src/profilingForDash.ipynb
@@ -1556,20 +1556,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2013 = pd.read_csv(\"../data/working/DNA_2013.csv\", index_col = [0])"
+    "df2014 = pd.read_csv(\"../data/working/DNA_2014.csv\", index_col = [0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2013 = df2013.fillna(\" \")"
+    "df2014 = df2014.fillna(\" \")"
    ]
   },
   {
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1614,29 +1614,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>,feds,homd,jyskb,otconi,pdoraa,pfftt,riksbk,at...</td>\n",
-       "      <td>homd,nokia,riksbk,ikea,scsea,sveden,dunbst,sta...</td>\n",
+       "      <th>0</th>\n",
+       "      <td>,toamsi,toamsi,tosmsc,tosmsc,tshba,tshba,tshba,</td>\n",
+       "      <td>toamsi,tshba,tosmsc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <th>1</th>\n",
+       "      <td>,irevs,irevs,irevs,</td>\n",
+       "      <td>irevs</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>,tflecs,seexc,tflecs,</td>\n",
-       "      <td>tflecs,seexc</td>\n",
+       "      <th>2</th>\n",
+       "      <td>,euruno,</td>\n",
+       "      <td>euruno</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>,weider,seexc,weider,seexc,rcol,</td>\n",
-       "      <td>weider,rcol,seexc</td>\n",
+       "      <th>33</th>\n",
+       "      <td>,gensiu,gensiu,gensiu,</td>\n",
+       "      <td>gensiu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>,seexc,</td>\n",
-       "      <td>seexc</td>\n",
+       "      <th>34</th>\n",
+       "      <td>,btrnik,btrnik,btrnik,</td>\n",
+       "      <td>btrnik</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1644,81 +1644,81 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1942810</th>\n",
-       "      <td>,usfda,usfda,usfda,</td>\n",
-       "      <td>usfda</td>\n",
+       "      <th>1942803</th>\n",
+       "      <td>,amrcan,amrcan,ntitci,ntitci,onlnfr,onlnfr,amr...</td>\n",
+       "      <td>onlnfr,amrcan,ntitci</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1942812</th>\n",
-       "      <td>,noninc,noninc,noninc,</td>\n",
-       "      <td>noninc</td>\n",
+       "      <th>1942804</th>\n",
+       "      <td>,gecapt,nxsme,silivb,gecapt,gecapt,nxsme,nxsme...</td>\n",
+       "      <td>gecapt,silivb,nxsme,gnelc,silvbs</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1942822</th>\n",
-       "      <td>,bschl,trimel,usfda,bschl,bschl,trimel,trimel,...</td>\n",
-       "      <td>usfda,bschl,trimel</td>\n",
+       "      <th>1942807</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1942827</th>\n",
-       "      <td>,insurg,insurg,</td>\n",
-       "      <td>insurg</td>\n",
+       "      <th>1942853</th>\n",
+       "      <td>,grnlft,kalamc,stry,stry,stry,</td>\n",
+       "      <td>stry,kalamc,grnlft</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1942828</th>\n",
-       "      <td>,atricu,atricu,</td>\n",
-       "      <td>atricu</td>\n",
+       "      <th>1942854</th>\n",
+       "      <td>,zogeni,ardgm,cowhrp,zogeni,zogeni,endoph,</td>\n",
+       "      <td>ardgm,cowhrp,endoph,zogeni</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>364991 rows × 2 columns</p>\n",
+       "<p>364853 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                             company_codes  \\\n",
-       "21       ,feds,homd,jyskb,otconi,pdoraa,pfftt,riksbk,at...   \n",
-       "22                                                           \n",
-       "25                                   ,tflecs,seexc,tflecs,   \n",
-       "29                        ,weider,seexc,weider,seexc,rcol,   \n",
-       "43                                                 ,seexc,   \n",
+       "0          ,toamsi,toamsi,tosmsc,tosmsc,tshba,tshba,tshba,   \n",
+       "1                                      ,irevs,irevs,irevs,   \n",
+       "2                                                 ,euruno,   \n",
+       "33                                  ,gensiu,gensiu,gensiu,   \n",
+       "34                                  ,btrnik,btrnik,btrnik,   \n",
        "...                                                    ...   \n",
-       "1942810                                ,usfda,usfda,usfda,   \n",
-       "1942812                             ,noninc,noninc,noninc,   \n",
-       "1942822  ,bschl,trimel,usfda,bschl,bschl,trimel,trimel,...   \n",
-       "1942827                                    ,insurg,insurg,   \n",
-       "1942828                                    ,atricu,atricu,   \n",
+       "1942803  ,amrcan,amrcan,ntitci,ntitci,onlnfr,onlnfr,amr...   \n",
+       "1942804  ,gecapt,nxsme,silivb,gecapt,gecapt,nxsme,nxsme...   \n",
+       "1942807                                                      \n",
+       "1942853                     ,grnlft,kalamc,stry,stry,stry,   \n",
+       "1942854         ,zogeni,ardgm,cowhrp,zogeni,zogeni,endoph,   \n",
        "\n",
-       "                                            non_duplicates  \n",
-       "21       homd,nokia,riksbk,ikea,scsea,sveden,dunbst,sta...  \n",
-       "22                                                          \n",
-       "25                                            tflecs,seexc  \n",
-       "29                                       weider,rcol,seexc  \n",
-       "43                                                   seexc  \n",
-       "...                                                    ...  \n",
-       "1942810                                              usfda  \n",
-       "1942812                                             noninc  \n",
-       "1942822                                 usfda,bschl,trimel  \n",
-       "1942827                                             insurg  \n",
-       "1942828                                             atricu  \n",
+       "                           non_duplicates  \n",
+       "0                     toamsi,tshba,tosmsc  \n",
+       "1                                   irevs  \n",
+       "2                                  euruno  \n",
+       "33                                 gensiu  \n",
+       "34                                 btrnik  \n",
+       "...                                   ...  \n",
+       "1942803              onlnfr,amrcan,ntitci  \n",
+       "1942804  gecapt,silivb,nxsme,gnelc,silvbs  \n",
+       "1942807                                    \n",
+       "1942853                stry,kalamc,grnlft  \n",
+       "1942854        ardgm,cowhrp,endoph,zogeni  \n",
        "\n",
-       "[364991 rows x 2 columns]"
+       "[364853 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2013['non_duplicates'] = [set(code) for code in df2013['company_codes'].str.split(\",\")] #creates an empty set, goes through each row in company_codes and splits the string in each row by the comma adds each company code and adds company code to set \n",
-    "df2013['non_duplicates'] = [list(code) for code in df2013['non_duplicates']] #creates a list object for the entries in the set for each row\n",
-    "df2013['non_duplicates'] = [','.join(code) for code in df2013['non_duplicates']] #joins the objects in the list with commas\n",
-    "df2013['non_duplicates'] = df2013['non_duplicates'].str[1:] #removes the first comma in the company_codes in each row\n",
-    "df2013[['company_codes', 'non_duplicates']]"
+    "df2014['non_duplicates'] = [set(code) for code in df2014['company_codes'].str.split(\",\")] #creates an empty set, goes through each row in company_codes and splits the string in each row by the comma adds each company code and adds company code to set \n",
+    "df2014['non_duplicates'] = [list(code) for code in df2014['non_duplicates']] #creates a list object for the entries in the set for each row\n",
+    "df2014['non_duplicates'] = [','.join(code) for code in df2014['non_duplicates']] #joins the objects in the list with commas\n",
+    "df2014['non_duplicates'] = df2014['non_duplicates'].str[1:] #removes the first comma in the company_codes in each row\n",
+    "df2014[['company_codes', 'non_duplicates']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1750,47 +1750,47 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>seexc</td>\n",
-       "      <td>57678</td>\n",
+       "      <td>79276</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>usfda</td>\n",
-       "      <td>28115</td>\n",
+       "      <td>fffaim</td>\n",
+       "      <td>37150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>fffaim</td>\n",
-       "      <td>19394</td>\n",
+       "      <td>usfda</td>\n",
+       "      <td>32021</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>pfiz</td>\n",
-       "      <td>11944</td>\n",
+       "      <td>nasdaq</td>\n",
+       "      <td>13815</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>jonjon</td>\n",
-       "      <td>10066</td>\n",
+       "      <td>pfiz</td>\n",
+       "      <td>13254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>glxo</td>\n",
-       "      <td>6784</td>\n",
+       "      <td>9578</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>brstmy</td>\n",
-       "      <td>6582</td>\n",
+       "      <td>jonjon</td>\n",
+       "      <td>8420</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>amge</td>\n",
-       "      <td>6442</td>\n",
+       "      <td>medinc</td>\n",
+       "      <td>8405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>sndoz</td>\n",
-       "      <td>6250</td>\n",
+       "      <td>zenec</td>\n",
+       "      <td>7945</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1798,24 +1798,24 @@
       ],
       "text/plain": [
        "     Code  Frequency\n",
-       "1   seexc      57678\n",
-       "2   usfda      28115\n",
-       "3  fffaim      19394\n",
-       "4    pfiz      11944\n",
-       "5  jonjon      10066\n",
-       "6    glxo       6784\n",
-       "7  brstmy       6582\n",
-       "8    amge       6442\n",
-       "9   sndoz       6250"
+       "1   seexc      79276\n",
+       "2  fffaim      37150\n",
+       "3   usfda      32021\n",
+       "4  nasdaq      13815\n",
+       "5    pfiz      13254\n",
+       "6    glxo       9578\n",
+       "7  jonjon       8420\n",
+       "8  medinc       8405\n",
+       "9   zenec       7945"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "code = df2013['non_duplicates'].str.lower().str.cat(sep=' ') #removes the commas and convert the string into lower case\n",
+    "code = df2014['non_duplicates'].str.lower().str.cat(sep=' ') #removes the commas and convert the string into lower case\n",
     "words = nltk.tokenize.word_tokenize(code) #creates token from each part of the string, so that we can get the count of each individual companies and not multiple companies together\n",
     "word_dist = nltk.FreqDist(words) #gives a frequency distribution of each token generated\n",
     "#print (word_dist)\n",
